# senswap-contract

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  soprox.config.json  url.js
lib/: deployer.js  network.js
program/: Cargo.toml
program/src/: error.rs  instruction.rs  lib.rs  processor.rs
program/src/helper/: mod.rs  oracle.rs
program/src/interfaces/: isplata.rs  isplt.rs  xsplt.rs
program/src/schema/: account.rs  mint.rs  pool.rs
src/client/: app.js  constructor.test.js  hello_world.js  helpers.js  index.js  main.js
src/client/helpers/: store.js  util.js
src/client/util/: new-account-with-lamports.js  new-system-account-with-airdrop.js  send-and-confirm-transaction.js  sleep.js  store.js
src/configs/: schema.json
src/program/: Cargo.toml  do.sh
src/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
src/program/src/archive/: dao.rs
src/program/src/helper/: curve.rs  math.rs  mod.rs  new_oracle.rs  oracle.rs  pubutil.rs  umath.rs
src/program/src/interfaces/: isplt.rs  isrc20.rs  mod.rs  xsplata.rs  xsplt.rs
src/program/src/schema/: account.rs  dao.rs  dummy.rs  lpt.rs  mod.rs  network.rs  pool.rs  sen.rs  token.rs
